final items: estudiantes, cronograma, etc

--- a/Compromisos.tex
+++ b/Compromisos.tex
@@ -44,7 +44,23 @@ con los objetivos y con la metodología planteada.
 \end{instrucciones}
 
 %Final
-Publicar al menos 4 artículos internacionales con algunos de los siguientes resultados:
+\begin{itemize}
+\item Artículo en revistas ISI (Web of Science) o Scopus o en revista A1 o A2.
+\item Otro producto de nuevo conocimiento, de autoría o en coautoría
+  del estudiante: artículo en revista A1 o A2.
+\item Un artículo en revista de divulgación.
+\item Proyecto de investigación presentado a una entidad o convocatoria externa
+\item Pasantía de investigación para el estudiante de Doctorado.
+\item Participaciòn con ponencia en evento académico nacional o
+  internacional.
+\end{itemize}
+
+
+
+Dirección de un trabajo de investigación para optar al título de Magíster.
+
+Opcional: Participación con ponencia en evento académico nacional :
+    13° Encuentro Colombiano de Matemática Educativa 2012 - ASCOLMEPublicar al menos 4 artículos internacionales con algunos de los siguientes resultados:
 
 Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
 
