--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -53,6 +53,12 @@
 {\begingroup}{ \medskip \endgroup}
 \excludecomment{evaluacion}
 
+\includecomment{gammalines}
+\specialcomment{gammalines}
+{\begingroup}{ \medskip \endgroup}
+\excludecomment{gammalines}
+
+
 \includecomment{proyecto}
 \specialcomment{proyecto}
 {\begingroup}{\endgroup}
@@ -138,10 +144,20 @@ La ficha técnica es el resumen del proyecto, con una extensión máxima de seis
 
 \section{Línea, programa o agenda de investigación en la que se inscribe el proyecto}
 
+\begin{instrucciones}
+planteamiento del problema, marco teórico, objetivos, 
+metodología, resultados esperados, cronograma, compromisos y estrategia de comunicación, funciones del 
+estudiante, presupuesto (según formato, incorporado en el texto y la versión en Excel) y  bibliografía.  Es 
+importante tener en cuenta que el proyecto de investigación es el documento sobre el cual se realizará la 
+evaluación, constituye un medio de comunicación científica por el cual el investigador interactúa con pares 
+anónimos que darán un concepto sobre la calidad de su proyecto. El proyecto no puede tener una 
+extensión mayor de  30 páginas, incluidos anexos y bibliografía
+\end{instrucciones}
 
 % replace \include by \input at the end to check the pages
 % In branch release the full document will be generated
 \include{Planteamiento_del_Problema}
+\include{Marco_teorico}
 \include{Objetivos}
 \include{Metodologia}
 \include{Resultados}
