--- a/Metodologia.tex
+++ b/Metodologia.tex
@@ -126,6 +126,24 @@ búsquedas en el LHC en grupos de trabajo de ATLAS y LHCb.
   pasos de la metodología.
 \end{proyecto}
 
+A través de todo el proyecto se requiere de una infraestructura de
+computación de alto rendimiento adecuada que garantice una
+disponibilidad permanente de poder de computo para las diferentes
+simulaciones y programas computacionales que requiere el proyecto. El
+grupo ha venido consolidando sus herramientas de computación con la
+adquisición de un servidor blade con capacidad para 8 nodos, aunque de
+momento sólo tiene un nodo instalado. Toda esta experiencia le ha
+permitido consolidar un grupo establecer un grupo de desarrolladores y
+administradores de software científico que ahora conforman La división
+de Ciencias de la computación del grupo la cual es la encargada de
+administrar el Centro Regional de Simulación y Cálculo Avanzado
+CRESCA.  Una de las metas prioritarias es la unificar el poder de
+computo de los Grupos de Investigación de la Universidad en un Grid
+Institucional que la vez éste conectado con Grid-Colombia. En el
+proyecto solicitamos la renovación del contrato de Administrador de
+Sistemas Omar Zapata, que dedicaría parte de su tiempo para la
+administración de CRESCA y la implementación del Grid Institucional de
+computación de alto rendimiento.
 
 
 
