--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -26,10 +26,9 @@ paralelamente se ha venido acumulando evidencia experimental que
 requiere extender el modelo estándar con nuevas partículas. En la
 actualidad hay un gran esfuerzo experimental para explorar en detalle
 todas esas posibilidades. Estamos ahora en una época de efervescencia
-experimental con detectores de p
-artículas instalados desde las alturas
+experimental con detectores de partículas instalados desde las alturas
 de satelites artificiales, hasta las profundidades de laboratorios
-subterráneos a kilometros de profundidad. 
+subterráneos a kilometros de profundidad.
 
 El Large Hadron Collider (LHC), en un tunel a 100 metros de profundidad y
 con una circunferencia de 27 Km, es el primer acelerador
@@ -55,8 +54,7 @@ será instalado en la estación espacial internacional. Éste medirá el
 espectro de antiprotones y positrones en un rango de energía mucho más
 amplio y con una estadística mucho mejor.
 
-El satélite Planck fue lanzado en mayo, y desde julio se encuentra en
-pleno funcionamiento.  Con los datos obtenidos de este experimento se
+El satélite Planck fue lanzado en mayo de 2009.  Con los datos obtenidos de este experimento se
 espera medir la radiación cósmica de fondo con mucha más precisión que
 su antecesor WMAP.
 
@@ -210,6 +208,7 @@ modelo como el mecanismo de generación de masas para neutrinos.
   masa atmosférica.
 \end{proyecto}
 
+\begin{gammalines}
 Cuando el gravitino es la LSP además constituye un candidato viable de
 materia oscura inestable. Éste caso ha sido estudiado exhaustivamente
 en la literatura por sus implicaciones en experimentos de rayos
@@ -248,7 +247,7 @@ experimentos de rayos cósmicos.
   materia oscura y los términos bilineales explican los datos de
   oscilaciones de neutrinos. 
 \end{proyecto}
-
+\end{gammalines}
 
 La metodología desarrollada en el estudio exhaustivo del modelo con
 ruptura bilineal de paridad R la hemos logrado aplicar a otros modelos
