--- a/Resultados.tex
+++ b/Resultados.tex
@@ -47,6 +47,111 @@ con los objetivos y con la metodología planteada.
 
 \end{instrucciones}
 
+\begin{instrucciones}
+  Los impactos no necesariamente se logran al finalizar el proyecto, ni
+con la sola consecución de los resultados/productos. Los impactos
+esperados son una descripción de la posible incidencia del uso de los
+resultados del proyecto en función de la solución de los asuntos o
+problemas estratégicos, nacionales o globales, abordados. Generalmente
+se logran en el mediano y largo plazo, como resultado de la aplicación
+de los conocimientos o tecnologías generadas a través del desarrollo
+de una o varias líneas de investigación en las cuales se inscribe el
+proyecto. Los impactos pueden agruparse, entre otras, en las
+siguientes categorías: sociales, económicos, ambientales, de
+productividad y competitividad. Para cada uno de los impactos
+esperados se deben identificar indicadores cualitativos o
+cuantitativos verificables as\'\i:
+\end{instrucciones}
+
+
+Nos encontramos en una época única en la que se esperan grandes
+descubrimientos en el área de física de altas energías. El LHC ha
+comenzado a explorar la escala del TEV desde el 2010. Hasta el 2012
+estará acumulando datos a 7\,TeV de energía de centro de masas, y a
+partir del 2014 comenzará a funcionar a su energía de diseño de 14
+TeV. El satélite Planck fue lanzado en el 2009 y se espera que
+entregue datos definitivos sobre los parámetros astronómicos en el
+2012. La misión complementará y mejorará las observaciones hechas por
+el WMAP. Éste año XENON100 ha entregado sus primeros datos que
+comienzan a restringir las regiones del espacio de parámetros de
+algunos modelos de materia oscura, y para el 2015 se espera que los
+datos de XENON1T cubran completamente la región de materia oscura
+predicha por el MSSM restringido. AMS-02 es un detector de rayos
+cósmicos que será llevado a la estación espacial internacional a bordo
+de la última misión del transbordador Endeavor el 29 de abril de
+2011. Se espera que compruebe y mejore las medidas de PAMELA sobre
+exceso en el flujo de positrones de rayos cósmicos. Hemos entrado en
+una nueva era de la física que, de obtener los resultados esperados,
+combinaría los descubrimientos de nuevas partículas, a los cada vez
+mejor establecidos resultados de física de neutrinos y observaciones
+cosmológicas sobre materia oscura. El resultado de este proyecto es
+aportar a esta área de la ciencia con nuevas propuestas de señales
+para ser buscadas en estos detectores (subterráneos y en el espacio) y
+con la interpretación de los resultados que surjan de ellos en
+términos de los modelos propuestos, los cuales añaden partículas
+nuevas al modelo estándar de la partículas elementales. Estos se
+reflejarán en la publicación de al menos dos artículos científicos en
+el área, y en la presentación de los resultados en al menos dos
+conferencias internacionales.
+
+
+De especial importancia es el nuevo paradigma científico que surgirá
+de la combinación de todos esos resultados experimentales. Por ejemplo
+el descubrimiento en el LHC de la partícula escalar elemental predicha
+por el Modelo Estándar, establecería finalmente las teorías gauge con
+rompimiento espontáneo de simetría como el principio fundamental para
+describir las interacciones subatómicas, redondeando décadas de
+desarrollo científico.  El estudio detallado de sus propiedades
+acompañado posiblemente de señales de nueva física marcará el camino
+para encontrar el mecanismo de generación de masas y mezclas de
+neutrinos, así como la determinación de la partícula que compone la
+materia oscura del Universo. A más tardar al finalizar ésta década se
+espera tener respuesta a estos interrogantes. Todo esto tendrá un
+impacto en la enseñanza de la física a todos los niveles. Además el
+descubrimiento del Higgs, que sería la primera partícula escalar
+elemental, daría un mejor fundamento teórico a los modelos
+inflacionarios en cosmología y a la interpretación de la energía
+oscura como la causante de la expansión acelerada del Universo. El
+otro escenario posible en el que no se encuentre al Higgs del modelo
+estándar, debe dar lugar a datos experimentales suficientes para
+dilucidar cual es el realmente el mecanismo de ruptura de la simetría
+electrodébil. Nuestro grupo es el llamado a difundir estos avances en
+nuestra sociedad, como lo ha venido haciendo a través de conferencias
+y cursos de extensión en los últimos años. Es importante que nuestro
+país siga participando en el desarrollo de la física fundamental, no
+sólo con la participación de grupos teóricos como el nuestro, sino
+también con grupos experimentales de física de altas energías como lo
+viene haciendo en las colaboraciones ATLAS y CMS del LHC con grupos de
+la Universidad Antonio Nariño y de los Andes respectivamente. Con
+ellos, y con los otros grupos teóricos del país hemos venido
+colaborando y organizando congresos en el área en los últimos años
+para consolidar ésta área de investigación en el país.
+
+El principal aporte un Grupo como el nuestro al desarrollo del país es
+la formación de talento humano con capacidad de hacer investigación
+científica al más alto nivel. Para ello es prioritario que nuestro
+Grupo siga produciendo productos de gran impacto en la comunidad
+mundial de física de altas energías con participación de nuestros
+estudiantes de pregrado y posgrado.  Aunque de momento los doctores
+que formamos son rápidamente reabsorbidos en el ámbito académico, 
+esperamos que a futuro, como pasa en otros países donde profesionales
+de este tipo son muy apreciados en empresas de innovación tecnológica,
+los nuestros puedan llegar a hacer aportes significativos a otros
+sectores de la sociedad.
+
+
+De ser aprobado, éste proyecto nos permitiría participar en esta
+excitante era del desarrollo científico que coincide con
+los primeros años de funcionamiento del LHC.  Se espera que entre los
+resultados de los próximos años LHC, no solo esté el del
+descubrimiento del Higgs, sino también de alguna señal de física más
+allá del modelo estándar que explique los problemas fenomenológicos y
+teóricos del Modelo Estándar. En los próximos años también se espera
+que los experimentos de detección directa, o indirecta a través de
+rayos cósmicos, entreguen una evidencia definitiva de materia oscura.
+
+
+
 %Final
 Publicar al menos 3 artículos internacionales con algunos de los siguientes resultados:
 
