--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -34,9 +34,9 @@ El Large Hadron Collider (LHC), en un tunel a 100 metros de profundidad y
 con una circunferencia de 27 Km, es el primer acelerador
 protón--protón que puede probar la escala del TeV.  Posee cuatro
 detectores, dos de los cuales están especialmente diseñados para
-encontrar señales de nueva física. El LHC finalmente ha comenzado a
-tomar datos en el 2010, aunque hasta el 2012 lo hará a la mitad de la
-energía para la cual fue diseñado.
+encontrar señales de nueva física. El LHC  ha comenzado a
+operar en el 2010, aunque hasta el 2012 lo hará a la mitad de la
+energía para la cual fue diseñado. A partir del 2014 aproximandamente, comenzará a funcionar a la energía de diseño de 14\,TeV.
 
 Desde el 2008 varios experimentos sobre rayos cósmicos como ATIC
 \cite{:2008zzr} y los satélites PAMELA \cite{Adriani:2008zr} y
@@ -49,14 +49,11 @@ el origen de las anomalías detectadas en electrones y positrones es
 debida a fuentes astrofísicas como pulsares cercanos, o a la
 aniquilación o el decaimiento de materia oscura. El detector de rayos
 cósmicos AMS-02~\cite{ams:2009}, ya se encuentra en el transbordador
-Endeavour para su próxima misión programada para el 29 de abril, para
-será instalado en la estación espacial internacional. Éste medirá el
+Endeavour para su próxima misión programada para el 29 de abril. Éste
+será instalado en la estación espacial internacional para medir el
 espectro de antiprotones y positrones en un rango de energía mucho más
-amplio y con una estadística mucho mejor.
+amplio y con una estadística mucho mejor que PAMELA.
 
-El satélite Planck fue lanzado en mayo de 2009.  Con los datos obtenidos de este experimento se
-espera medir la radiación cósmica de fondo con mucha más precisión que
-su antecesor WMAP.
 
 %hablar sobre XENON basado en la discusión de 1104.3572
 Los experimentos de detección directa de materia oscura instalados en
@@ -67,26 +64,30 @@ cubrir todo el espacio de parámetros para materia oscura del modelo
 estándar supersimétrico mínimo restringido (Constrained MSSM de sus
 siglas en Inglés).
 
+El satélite Planck fue lanzado en mayo de 2009.  Con los datos
+obtenidos de este experimento se espera medir la radiación cósmica de
+fondo con mucha más precisión que su antecesor WMAP.
+
 Finalmente hay varios experimentos de física de neutrinos en marcha
 que esperan mejorar los datos actuales de oscilaciones de neutrinos.
 
 
 En éste proyecto se explorarán diferentes extensiones del modelo
 estándar que explican estos datos y se obtendrán predicciones
-concretas en los experimentos presentes y futuros mencionados
+concretas para los experimentos presentes y futuros mencionados
 anteriormente.
 
 %evidencia 1
 La principal evidencia de necesidad de física más allá del modelo
-estándar se halla en las medidas de las oscilaciones de neutrinos,
-que a través de muchos experimentos diferentes han logrado establecer
-que los neutrinos tienen masa y se mezclan entre sí. Si la masa de los
+estándar se halla en las medidas de las oscilaciones de neutrinos, que
+a través de muchos experimentos diferentes han logrado establecer que
+los neutrinos tienen masa y se mezclan entre sí. Si la masa de los
 neutrinos es total o parcialmente explicada por métodos radiativos, no
 sólo es posible dar cuenta de la pequeñez de sus masas con respecto a
 la de los otros fermiones, sino también, hacer predicciones muy
 concretas en aceleradores de partículas, como el LHC. Aún en el caso
 de modelos tan estudiados de este tipo, como es el caso del modelo
-supersimétrico con ruptura bilineal de paridad R, quedan muchos
+supersimétrico con ruptura bilineal de paridad R, quedan aún muchos
 aspectos que explorar.
 
 %evidencia 2
@@ -125,225 +126,15 @@ ingredientes necesarios, no es posible explicar bariogénesis.
 Un modelo ideal sería uno que de cuenta de las masas y mezclas de
 neutrinos, tenga un candidato a materia oscura que sirva para explicar
 el exceso de positrones en experimentos de rayos cósmicos y a la vez
-contenga los ingredientes para explicar bariogenesis. En este proyecto
-pretendemos formular un modelo de éstas características, además
-queremos continuar explorando otros posibles modelos que puedan dar
-cuenta de alguna de las observaciones que requieren una extensión del
-modelo estándar.
+contenga los ingredientes para explicar bariogénesis.  En este
+proyecto pretendemos formular un modelo de éstas características,
+además queremos continuar explorando otros posibles modelos que puedan
+dar cuenta de alguna de las evidencias fenomenológicas (masas de
+neutrinos o materia oscura) que requieren una extensión del modelo
+estándar.
  
-
-\subsection{Marco teórico}
-
-\begin{instrucciones}
- CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
-\end{instrucciones}
-
-%comentar sobre una simetría Z_2
-La partícula de materia oscura puede ser estable, o inestable con un
-tiempo de vida mucho más grande que la edad del Universo. En el primer
-caso usualmente se impone una simetría adicional $Z_2$ bajo la cual
-las partículas del modelo estándar son pares, mientras que las
-partículas nuevas son impares. Este tipo de simetría garantiza que la
-partícula impar más liviana es estable y, de ser neutra, constituye un
-buen candidato de materia oscura. En el programa computacional
-microMEGAS~\cite{Belanger:2006is} se puede implementar cualquier
-extensión del modelo estándar que posea una simetría $Z_2$ para
-calcular numéricamente la densidad de reliquia de materia oscura y la
-sección eficaz WIMP--nucleón, relevante para los experimentos de de
-detección directa como XENON100. Cuando la partícula de materia oscura
-es inestable se requiere de alguna simetría para garantizar que su
-acoplamiento a las partículas del modelo estándar esté suficientemente
-suprimido.
-
-En el caso de supersimetría por ejemplo, todas las interacciones del
-modelo están especificadas por la simetría gauge y el superpotencial,
-que debe ser una función holomórfica de los campos escalares del
-modelo. En el modelo estándar supersimétrico, además de los términos
-del superpotencial que constituyen la semilla del potencial escalar y
-del Lagrangiano de Yukawa, la invarianza gauge permite los siguiente
-términos
-\begin{equation}
-  \label{eq:5}
-  W_{\cancel{R_p}} = \mu_i\widehat{L}_i\widehat{H}_u + 
-  \lambda_{i j k}\widehat{L}_i\widehat{L}_j\widehat{l}_k +
-  \lambda'_{i j k}\widehat{L}_i\widehat{Q}_j\widehat{d}_k + 
-  \lambda''_{ijk}\widehat{u}_i\widehat{d}_j\widehat{d}_k\,
-\end{equation}
-La simetría $Z_2$, conocida en éste caso como paridad R, $R_p$,
-prohíbe todos estos términos, y cuando la partícula impar bajo paridad
-R es el neutralino o el gravitino, ésta puede ser una candidato de
-materia oscura. Aunque se rompa paridad R y alguno de estos términos
-queden permitidos, el gravitino puede seguir siendo un candidato de
-materia oscura pues sus decaimientos están suprimidos por la escala de
-Planck. Para que el neutralino pueda ser materia oscura inestable
-cuando se rompe paridad R, se requiere que los acoplamientos sean
-extremadamente pequeños: del orden de $10^{-24}$ para los
-acoplamientos trilineales ${\lambda^{(\ }}'\;''{}^)$.
-
-
-\subsection{Justificación}
-
-En el Grupo nos hemos enfocado en extensiones del modelo estándar que
-dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado
-exhaustivamente las predicciones del modelo  con ruptura bilineal de
-paridad R que incluye sólo los tres términos con $\mu_i$ del
-superpotencial en \eqref{eq:5}, tanto para el Tevatron como para el
-LHC asumiendo que el neutralino es la partícula supersimétrica más
-liviana (LSP de sus siglas en inglés)
-\cite{Magro:2003zb,deCampos:2005ri,deCampos:2007bn,deCampos:2008ic,deCampos:2008re,DeCampos:2010yu}. En
-el último trabajo al respecto hemos determinado el nivel de precisión
-con el que se puede llegar a medir en el LHC la correlación entre
-decaimientos de neutralinos a muón y tau con el ángulo de mezcla
-atmosférico de neutrinos: una predicción muy concreta que de no
-observarse en el LHC en los próximos años descartaría completamente el
-modelo como el mecanismo de generación de masas para neutrinos.
-\begin{proyecto}
-  En este proyecto pretendemos seguir explorando más correlaciones de
-  de observables en el LHC con física de neutrinos para determinar con
-  que nivel de precisión se podrían llegar a medir en el LHC. Cuando
-  el neutralino es la LSP, los decaimientos a tres cuerpos mediados
-  por sfermiones con muones y electrones en los estados finales, están
-  correlaciones con el ángulo de mezcla solar, y la longitud de
-  decaimiento del neutralino está correlacionada con la diferencia de
-  masa atmosférica.
-\end{proyecto}
-
-\begin{gammalines}
-Cuando el gravitino es la LSP además constituye un candidato viable de
-materia oscura inestable. Éste caso ha sido estudiado exhaustivamente
-en la literatura por sus implicaciones en experimentos de rayos
-cósmicos, especialmente en el caso en que las masas de neutrinos son
-explicadas a través del mecanismo de seesaw y el modelo también
-explica bariogénisis a través de leptogénesis. De hecho, como hemos
-mostramos en \cite{Choi:2010jt}, y ratificado por otro grupo con datos
-más recientes en \cite{Garny:2010eg}, los últimos datos de líneas de
-rayos gamma publicado por FERMI-LAT excluyen la posibilidad de que las
-masas de neutrinos puedan ser generadas por términos bilineales de
-ruptura de paridad R si la temperatura de recalentamiento es sobre
-$10^9\ $GeV como sugiere leptogénesis. En esta región del espacio de
-parámetros los acoplamientos bilineales son tan pequeños que el
-decaimiento del partícula siguiente a la LSP, la NLSP, ocurre fuera
-del detector en el LHC, por lo que el modelo es básicamente
-indistinguible del MSSM. En éste caso los datos de detección indirecta
-de materia oscura a través de rayos cósmicos serían la única forma de
-diferenciar el modelo del de supersimetría usual con conservación de
-paridad R y el neutralino como materia oscura, del modelo con ruptura
-bilineal de paridad R con el gravitino como materia oscura.  En un
-proyecto paralelo, liderado por un investigador asociado al grupo,
-queremos explorar las implicaciones que los datos de líneas de rayos
-gammas tiene sobre el modelo de ruptura bilineal de paridad
-R. Permitiendo temperaturas de recalentamiento hasta de 1 TeV, y
-relajando la hipótesis de universalidad en las masas de los gauginos,
-usualmente hecha en estos análisis, queremos establecer las regiones
-del espacio de parámetros donde es posible explicar los datos de
-oscilaciones de neutrinos con los parámetros de ruptura bilineal de
-paridad R. En éste caso las señales generadas por la partícula próxima
-al LSP en el LHC podrían predecir señales muy específicas en los
-experimentos de rayos cósmicos.
-\begin{proyecto}
-  En este proyecto realizaremos las simulaciones de las señales del
-  NSLP para el LHC cuando el gravitino es la LSP en las regiones del
-  espacio de parámetros donde el gravitinos es un buen candidato a
-  materia oscura y los términos bilineales explican los datos de
-  oscilaciones de neutrinos. 
-\end{proyecto}
-\end{gammalines}
-
-La metodología desarrollada en el estudio exhaustivo del modelo con
-ruptura bilineal de paridad R la hemos logrado aplicar a otros modelos
-de generación radiativa de masas de neutrinos con nuevas partículas a
-la escala del TeV asequibles en el LHC
-\cite{Sierra:2008wj,AristizabalSierra:2006ri}. Recientemente hemos
-comenzado a explorar modelos que puedan dar cuenta simultáneamente de
-masas de neutrinos y candidatos de materia oscura
-\cite{Hirsch:2005ag,Choi:2010jt,Sierra:2008wj}. En el caso del seesaw
-radiativo por ejemplo, se implementa una simetría $Z_2$ de manera que
-la masa de neutrinos sólo pueda ser generada radiativamente con los
-neutrinos derechos a la escala del TeV garantizando que el modelo
-pueda comprobarse en el LHC. La misma simetría garantiza que el
-escalar o a un neutrino derecho puedan ser buenos candidatos de
-materia oscura. Finalmente, la estructura escalar del modelo permite
-tener el Higgs mucho más pesado que en el modelo estándar de forma
-compatible con las correcciones electrodébiles. 
-% Las regiones del modelo en la cual la partícula de materia oscura es
-% escalar ha sido bastante estudiada en la literatura en el contexto
-% del modelo conocido como doblete inerte \cite{1011.1411}. Sin
-% embargo, las regiones en las cuales el neutrino derecho es el
-% candidato de materia oscura todavía requieren de
-\begin{proyecto}
-  Todo esto hace muy llamativo el estudio de las señales del seesaw
-  radiativo para el LHC, y en los experimentos de detección directa de
-  materia oscura. En este proyecto pretendemos establecer todas las
-  regiones del espacio de parámetros donde se puede tener la densidad
-  de reliquia de materia oscura y las masas y mezclas de neutrinos
-  adecuadas. En cada región se establecerán las señales que se esperan
-  en el LHC y en experimentos de detección directa de materia oscura,
-  y para las señales más representativas hacer simulaciones para el
-  detector ATLAS del LHC.
-\end{proyecto}
-
-Nuestro grupo \cite{Nardi:2008ix} fue uno de los primeros en proponer
-una explicación en términos de materia oscura inestable para explicar
-el exceso de positrones observado por el satelite PAMELA en el
-2008 \cite{Adriani:2008zr}. Luego hemos construido un modelo basado en
-supersimetría con ruptura de paridad R a través de términos
-trilineales del tipo $\lambda$ en la ec.~\eqref{eq:5}, para explicar
-la preferencia por decaimientos leptónicos de la partícula de materia
-oscura, que en este caso es el neutralino. Para ello se ha
-implementado una simetría horizontal que permite sólo la presencia de
-acoplamientos trilineales leptónicos \cite{Sierra:2009zq}. 
-\begin{proyecto}
-  En este proyecto queremos explorar la posibilidad de explicar
-  también las masas de neutrinos, y el gravitino como materia oscura
-  en el marco del modelo con ruptura de paridad R a través de términos
-  trilineales del tipo $\lambda$.
-\end{proyecto}
- En un proyecto en marcha estamos explorando la posibilidad
-opuesta de un candidato de materia oscura que decae sólo
-hadrónicamente. La simetría horizontal garantiza que sólo los
-acoplamientos trilineales de quarks derechos estén
-permitidos. Finalmente hemos extendido el modelo para incluir masas de
-neutrinos. Ésta experiencia nos servirá para hacer las modificaciones
-necesarias al modelo con acoplamientos trilineales leptónicos del tipo
-$\lambda$ para dar cuenta de masas y mezclas para los neutrinos. 
-
-
-
-\begin{proyecto}
-  En términos generales, en este proyecto queremos explorar modelos
-  motivados por falencias fenomenológicas del modelo estándar,
-  especialmente aquellos modelos que no sólo tienen implicaciones en
-  el LHC, sino también en experimentos de detección de rayos cósmicos,
-  y experimentos de detección directa de materia oscura.
-\end{proyecto}
-
-
-%resumiendo tenemos
-%1. Correlaciones bilineal en el LHC
-%2  Restricciones en masa de neutrinos con gravitino LSP en el modelo bilineal.
-%3. Materia oscura con el seesaw radiativo.
-%4. modelo con lambda: gravitino y neutrinos derechos.
-
-
-\begin{proyecto}
-  Con base en lo planteado anteriormente, lo que proponemos en este
-  proyecto es tratar de responder la siguiente pregunta: ¿Cuáles
-  serían las restricciones impuestas por los recientes y futuros datos
-  de los experimentos de física de partículas sobre modelos que
-  presenten una partícula candidata a materia oscura o que generen
-  masas para los neutrinos?
-\end{proyecto}
-
-
-
-
-
-
-
- 
-
-
-
+\begin{ideas}
+  
 Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiativo para generar masas de neutrinos.
 
 Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se espera obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
@@ -352,7 +143,7 @@ Con base en lo planteado anteriormente, lo que proponemos en este proyecto es tr
 
 
 \subsection{Marco teórico}
-
+\end{ideas}
 
 \begin{ideas}
 Se ha calculado el flujo de rayos gamas y confrontarlo con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el candidato de materia oscura inestable (CMOI) en la región de masa de hasta 80 GeV. Estudios recientes  muestran que en está región son importantes canales de decaimiento que no se habían considerado previamente [4]. 
