TeX key information processed

--- a/Compromisos.tex
+++ b/Compromisos.tex
@@ -45,16 +45,19 @@ con los objetivos y con la metodología planteada.
 
 %Final
 \begin{itemize}
-\item Artículo en revistas ISI (Web of Science) o Scopus o en revista A1 o A2.
+\item Artículo en revistas ISI (Web of Science) o Scopus
 \item Otro producto de nuevo conocimiento, de autoría o en coautoría
-  del estudiante: artículo en revista A1 o A2.
+  del estudiante: artículo en revista ISI (Web of Science) o Scopus.
 \item Un artículo en revista de divulgación.
-\item Proyecto de investigación presentado a una entidad o convocatoria externa
+\item Proyecto de investigación presentado a una entidad o
+  convocatoria externa.
 \item Pasantía de investigación para el estudiante de Doctorado.
 \item Participaciòn con ponencia en evento académico nacional o
   internacional.
 \end{itemize}
 
+\begin{ideas}
+  
 
 
 Dirección de un trabajo de investigación para optar al título de Magíster.
@@ -74,6 +77,7 @@ presentes y futuros imponen sobre el neutralino como CMOI.
 Determinación de las señales en el LHC para 1) Modelos de RTPR con violación de número bariónico y mecanismo see-saw para masas de neutrinos, inducida por una simetría Abeliana anómala U(1). 2) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 3) Modelos 3-3-1 con cuatro familias
 
 Formación 1 estudiante de maestría y 1 de doctorado.
+\end{ideas}
 
 \begin{ideas}
 
