--- a/Marco_teorico.tex
+++ b/Marco_teorico.tex
@@ -217,7 +217,7 @@ LHC.
   electrodébiles.
 % Las regiones del modelo en la cual la partícula de materia oscura es
 % escalar ha sido bastante estudiada en la literatura en el contexto
-% del modelo conocido como doblete inerte \cite{1011.1411}. Sin
+% del modelo conocido como doblete inerte \cite{LopezHonorez:2010tb}. Sin
 % embargo, las regiones en las cuales el neutrino derecho es el
 % candidato de materia oscura todavía requieren de
 
