--- a/Objetivos.tex
+++ b/Objetivos.tex
@@ -3,10 +3,13 @@
  CODI: ¿Están vinculados con el problema planteado? ¿Son viables, claros, concretos y factibles, de acuerdo con el estudio y los métodos?
 \end{instrucciones}
 
-Implemenetar y complementar estudios fenomenológicos de modelos de
-física más allá del Modelo Estándar que den cuenta de las masas de neutrinos y que posean
-candidatos de materia oscura con predicciones tanto para el LHC como
-para experimentos de detección directa o indirecta de materia oscura.
+Implementar y complementar estudios fenomenológicos de modelos de
+física más allá del Modelo Estándar, con predicciones tanto en el LHC
+como en experimentos de detección directa o indirecta de materia
+oscura, que den cuenta de las masas de neutrinos y que posean
+candidatos de materia oscura
+
+\subsection{Objetivos específicos}
 
 \begin{itemize}
 \item 
@@ -26,19 +29,20 @@ para experimentos de detección directa o indirecta de materia oscura.
   En el modelo con ruptura bilineal de paridad R con el gravitino como
   la LSP, realizar las simulaciones de las señales del NSLP en el LHC
   en las regiones del espacio de parámetros donde el gravitinos es un
-  buen candidato a materia oscura y los términos bilineales explican
-  los datos de oscilaciones de neutrinos.
+  buen candidato a materia oscura y los términos bilineales pueden
+  explicar los datos de oscilaciones de neutrinos.
 \end{proyecto}
 
 \item 
 \begin{proyecto}
   En el modelo con ruptura de paridad R a través de términos
   trilineales del tipo $\lambda$, extender el modelo para explicar las
-  masas de neutrinos, estableciendo cuando es el candidato de materia
+  masas de neutrinos, estableciendo cual es el candidato de materia
   oscura más apropiado en ese caso.
 \end{proyecto}
 
 
+\begin{darkmatter}
 \item 
 \begin{proyecto}
   En el seesaw radiativo establecer las regiones del espacio de
@@ -49,7 +53,7 @@ para experimentos de detección directa o indirecta de materia oscura.
   señales más representativas, hacer simulaciones para el detector
   ATLAS del LHC.
 \end{proyecto}
-
+\end{darkmatter}
 
 \end{itemize}
 
