--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -57,7 +57,7 @@ amplio y con una estadística mucho mejor que PAMELA.
 
 %hablar sobre XENON basado en la discusión de 1104.3572
 Los experimentos de detección directa de materia oscura instalados en
-laboratorios subterráneos como XENON100 \cite{1104.3121}, han
+laboratorios subterráneos como XENON100 \cite{Aprile:2011ts}, han
 comenzado a explorar las regiones predichas por algunos de los modelos
 más estudiados de materia oscura. Para los próximos años se espera
 cubrir todo el espacio de parámetros para materia oscura del modelo
