--- a/Cronograma.tex
+++ b/Cronograma.tex
@@ -6,17 +6,18 @@
 
 \begin{itemize}
 \item \textbf{meses 1-3} Revisión bibliográfica sobre cálculos de
-  secciones eficaces promediadas térmicamente , programas
+  secciones eficaces promediadas térmicamente, programas
   computacionales para cálculos de secciones eficaces y amplitudes de
   decaimientos, propiedades de los detectores y filtros de selección
   de datos en el LHC, propagación de los diferentes tipos de rayos
   cósmicos a través de la galaxia.  En esta fase también se formará el
   estudiante de Doctorado en los tópicos específicos relativos a la
-  investigación, así como permitirle tomar parte activa en todas las
+  investigación, así como motivarle a tomar parte activa en todas las
   fases de desarrollo del proyecto.
 
-\item \textbf{meses 3-12}
-  Durante está fase desarrollaremos las herramientas computacionales necesarias para el proyecto, y los cálculos analíticos necesarios:
+\item \textbf{meses 3-12} Durante está fase desarrollaremos las
+  herramientas computacionales necesarias para el proyecto, y se
+  desarrollarán los cálculos analíticos necesarios.
 
 \begin{proyecto}
   Con los colaboradores de Brasil y Valencia hemos desarrollado un
@@ -25,76 +26,81 @@
   ángulo de mezcla atmosférico de neutrinos y el cociente decaimientos
   a dos cuerpos: $\tilde\chi_1^0\to W^\pm\mu^\mp$ sobre
   $\tilde\chi_1^0\to W^\pm\tau^\mp$, cuando el $W^\pm$ decae
-  hadrónicamente. Por lo que es necesario reconstruir la masa
+  hadrónicamente. En dicho código, es necesario reconstruir la masa
   invariante del $W^\pm$ a partir de los jets a los que se desintegra
-  y de usar cortas para seleccionar el $\mu$ o el $\tau$ asociado a
-  cada decaimiento del neutralino. En ésta fase se modificará el
-  programa para establecer el nivel de precisión con la que se puede
-  medir la correlación entre la longitud de decaimiento del neutralino
-  con la diferencia de masa atmosférica de masa al cuadrado.  El
-  programa de calcular longitud de decaimiento $L_0$ del neutralino y
-  su error $\Delta L_0$, donde $L_0$ está dada por
+  y usar cortes específicos de ailamiento de leptones para seleccionar
+  los $\mu$ y $\tau$ asociados a cada decaimiento del neutralino. En
+  ésta fase se modificará el programa para establecer el nivel de
+  precisión con la que se puede medir la correlación entre la longitud
+  de decaimiento del neutralino con la diferencia de masa atmosférica
+  al cuadrado.  El programa debe calcular la longitud de
+  decaimiento $L_0$ del neutralino y su error $\Delta L_0$, donde
+  $L_0$ está dada por
   \begin{align}
     L_0=\frac{L^{\text{lab}}}{p_{\tilde\chi_1^0}^{\text{reco}}}m_{\tilde\chi_1^0}^{inv}
   \end{align}
-  donde $L^{\text{lab}}$ es la distancia desde el punto de interacción
+  con $L^{\text{lab}}$ es la distancia desde el punto de interacción
   hasta el punto en el espacio donde decae el neutralino, $p$ y $m$
   son el cuadri-momentum y la masa invariante del neutralino. Para la
-  determinación de $\Delta L_0$ debemos hacer un programa para hacer
-  ajustas a las distribuciones gaussianas del cocientes
+  determinación de $\Delta L_0$ debemos hacer un programa que ajuste
+  las distribuciones gaussianas del cocientes
   $\frac{L^{\text{lab}}}{p_{\tilde\chi_1^0}^{\text{reco}}}$ y de la
-  masa invariante $m_{\tilde\chi_1^0}^{inv}$. Similarmente, para calcular el nivel de precisión
-  con el que se puede llegar a medir la correlación entre el ángulo de mezcla solar con 
-  los decaimientos a tres cuerpos mediados por sfermiones con muones y
-  electrones en los estados finales, debemos modificar el programa
-  para reconstruir estos decaimientos a tres cuerpos. 
+  masa invariante $m_{\tilde\chi_1^0}^{inv}$. Similarmente, para
+  calcular el nivel de precisión con el que se puede llegar a medir la
+  correlación entre el ángulo de mezcla solar con los decaimientos a
+  tres cuerpos mediados por sfermiones con muones y electrones en los
+  estados finales, debemos modificar el programa para reconstruir este
+  tipo de decaimientos a tres cuerpos.
 \end{proyecto}
 
 \begin{proyecto}
-  Para el caso en que el gravitino es la LSP debemos modificar el programa para calcular las correlaciones con base en la NLSP teniendo en cuenta los nuevos canales en las cuales la NLSP puede decaer al gravitino 
+  Para el caso en que el gravitino es la LSP debemos modificar el
+  programa para calcular las correlaciones con base en la NLSP
+  teniendo en cuenta los nuevos canales en las cuales la NLSP puede
+  decaer al gravitino
 \end{proyecto}
 
 
 \begin{proyecto}
   En ésta parte del proceso se establecerán las condiciones sobre los
   cuatro cargas $H$ libres del modelo estándar supersimétrico con una
-  simetría $U(1)_H$ con violación de número leptónico a través de
-  términos trilineales $\lambda$. Usando las restricciones
-  experimentales sobre los acoplamientos individuales
-  $\lambda$~\cite{Barbier:2004ez}, se establecerán las posibles señales de decaimiento
-  de la partícula supersimétrica más liviana, que permitan comprobar
-  el modelo propuesto en el LHC. Adicionalmente se 
-  implementará el mecanismo seesaw para explicar las masas y mezclas de
-  neutrinos, introduciendo nuevos flavones de carga fraccionaria.
-  En ésta parte se
-  analizará de forma sistemática las asignaciones de carga que
-  permitan la generación de texturas adecuadas de masas de neutrinos y
-  a la vez mantengan prohibidos los otros términos de ruptura de
-  paridad R. De acuerdo a exploraciones iniciales esperamos que en
-  este caso la LSP deba ser un gravitino si se quiere mantener un
-  candidato a materia oscura inestable. Para explorar las
-  restricciones que los datos de detección indirecta, se establecerá
-  el background de rayos cósmicos, asumiendo que las anomalías
-  actuales se pueden explicar a partir de fenómenos astrofísicos. Se
-  hará una programa de simulación en \texttt{Pythia}
-  \cite{Sjostrand:2006za} para calcular el flujo de positrones,
-  electrones, y se comparará con el background astrofísico para
-  establecer las regiones de tiempo de vida media y masas de
-  neutralinos que se pueden excluir a partir del los datos
+  simetría $U(1)_H$ con el fin de obtener un modelo de violación de
+  número leptónico a través de términos trilineales $\lambda$. Usando
+  las restricciones experimentales sobre los acoplamientos
+  individuales $\lambda$~\cite{Barbier:2004ez}, se establecerán las
+  posibles señales de decaimiento de la partícula supersimétrica más
+  liviana, que permitan comprobar el modelo propuesto en el
+  LHC. Adicionalmente se implementará el mecanismo seesaw para
+  explicar las masas y mezclas de neutrinos, introduciendo nuevos
+  flavones de carga fraccionaria.  En ésta parte se analizará de forma
+  sistemática las asignaciones de carga que permitan la generación de
+  texturas adecuadas de masas de neutrinos y a la vez mantengan
+  prohibidos los otros términos de ruptura de paridad R. De acuerdo a
+  exploraciones iniciales esperamos que en este caso la LSP deba ser
+  un gravitino si se quiere mantener un candidato a materia oscura
+  inestable. Para explorar las restricciones que los datos de
+  detección indirecta, se establecerá el background de rayos cósmicos,
+  asumiendo que las anomalías actuales se pueden explicar a partir de
+  fenómenos astrofísicos. Se hará una programa de simulación en
+  \texttt{Pythia} \cite{Sjostrand:2006za} para calcular el flujo de
+  positrones, y electrones, y se comparará con el background
+  astrofísico para establecer las regiones de tiempo de vida media y
+  masas de gravitinos que se pueden excluir a partir del los datos
   actuales. También se evaluará el impacto de las futuras medidas de
   positrones y electrones por parte PAMELA~\cite{Adriani:2008zr},
   Fermi--LAT\cite{Abdo:2009zk} y AMS-02~\cite{ams:2009} en los modelos
   estudiados. Es de resaltar que la simetría horizontal sólo permite
   la aparición de términos $\lambda$ con los tres índices diferentes
-  por los decaimientos del gravitino no pueden generar rayos gamma.
+  por lo que los decaimientos del gravitino no pueden generar rayos
+  gamma.
 \end{proyecto}
 
-
+\begin{darkmatter}
 \begin{proyecto}
   Para el seesaw radiativo, escribiremos el Lagrangiano del modelo el
-  lenguaje de programación LanHEP~\cite{0805.0555}. Con este programa
+  lenguaje de programación LanHEP~\cite{Semenov:2008jy}. Con este programa
   podremos generar las cuatro tablas en el formato de
-  CalcHEP~\cite{hep-ph/0412191}, con lo cual podremos usar calcular
+  CalcHEP~\cite{Pukhov:2004ca}, con lo cual podremos usar calcular
   las secciones eficaces y las amplitudes de decaimiento del modelo, y
   como MicrOMEGAS usas internamente CalcHEP, calcular también la
   densidad de reliquia y la sección eficaz WIMP-nucleón. Debemos crear
@@ -105,21 +111,22 @@
   secciones eficaces promediadas térmicamente para estar seguros que
   los resultados de MicroMEGAS son correctos.
 \end{proyecto}
+\end{darkmatter}
 
 
-\item \textbf{meses 12-18}
-En esta parte se obtendrán y analizarán los resultados numéricos de los modelos bajo consideración. El estudiante de doctorado realizará su pasantía doctoral en un Grupo de Investigación europeo.
+\item \textbf{meses 12-18} En esta parte se obtendrán y analizarán los
+  resultados numéricos de los modelos bajo consideración. El
+  estudiante de doctorado realizará su pasantía doctoral en un Grupo
+  de Investigación europeo.
 
-\item \textbf{meses 18-24} 
-  En esta parte se prepararán los artículos
-  para publicación con base en los resultados obtenidos. Uno sobre ...
-  Se analizarán los resultados importantes y se escribirán dos
-  artículos, uno con las restricciones de experimentos de rayos
-  cósmicos en modelos supersimétricos de ruptura de $R$--paridad con
-  materia oscura inestable, y otro sobre las predicciones para el LHC
-  del modelo estándar supersimétrico con una simetría $U(1)_H$ con
-  violación de número bariónico a través de términos trilineales
-  $\lambda''$.
+\item \textbf{meses 18-24} En esta parte se prepararán los artículos
+  para publicación con base en los resultados obtenidos. Uno sobre el
+  nivel de precisión con la que se pueden medir correlaciones nueval
+  del modelo de ruptura bilinea de paridad R en el LHC, y otra sobre
+  la formulación de un modelo consistente de ruptura trilineal de
+  paridad $R$ con términos $\lambda$, con el gravitino como materia
+  oscura inestable y con el mecanismo seesaw para generar masas de
+  neutrinos. .
 
   Se escribirá el artículo de divulgación sobre resultados recientes
   del LHC, que para la época estará brindando resultados definitivos
@@ -127,7 +134,6 @@ En esta parte se obtendrán y analizarán los resultados numéricos de los model
 
   Se presentarán los resultados en una conferencia internacional y se
   preparará el informe final del proyecto.
-
 \end{itemize}
 
 %%% Local Variables: 
