--- a/Resultados.tex
+++ b/Resultados.tex
@@ -67,12 +67,12 @@ cuantitativos verificables as\'\i:
 Nos encontramos en una época única en la que se esperan grandes
 descubrimientos en el área de física de altas energías. El LHC ha
 comenzado a explorar la escala del TEV desde el 2010. Hasta el 2012
-estará acumulando datos a 7\,TeV de energía de centro de masas, y a
+estará acumulando datos a 7\,TeV de energía de centro de masa, y a
 partir del 2014 comenzará a funcionar a su energía de diseño de 14
 TeV. El satélite Planck fue lanzado en el 2009 y se espera que
 entregue datos definitivos sobre los parámetros astronómicos en el
 2012. La misión complementará y mejorará las observaciones hechas por
-el WMAP. Éste año XENON100 ha entregado sus primeros datos que
+el WMAP. Éste año, XENON100 ha entregado sus primeros datos que
 comienzan a restringir las regiones del espacio de parámetros de
 algunos modelos de materia oscura, y para el 2015 se espera que los
 datos de XENON1T cubran completamente la región de materia oscura
@@ -88,44 +88,46 @@ cosmológicas sobre materia oscura. El resultado de este proyecto es
 aportar a esta área de la ciencia con nuevas propuestas de señales
 para ser buscadas en estos detectores (subterráneos y en el espacio) y
 con la interpretación de los resultados que surjan de ellos en
-términos de los modelos propuestos, los cuales añaden partículas
-nuevas al modelo estándar de la partículas elementales. Estos se
-reflejarán en la publicación de al menos dos artículos científicos en
-el área, y en la presentación de los resultados en al menos dos
-conferencias internacionales.
+términos de los modelos propuestos, en los cuales se añaden partículas
+nuevas al modelo estándar de la partículas elementales. Estos
+resultados se reflejarán en la publicación de al menos dos artículos
+científicos en el área con la participación de un estudiante de
+Doctorado, y en la presentación de los resultados en al menos una
+conferencia internacional.
 
 
 De especial importancia es el nuevo paradigma científico que surgirá
 de la combinación de todos esos resultados experimentales. Por ejemplo
 el descubrimiento en el LHC de la partícula escalar elemental predicha
-por el Modelo Estándar, establecería finalmente las teorías gauge con
-rompimiento espontáneo de simetría como el principio fundamental para
-describir las interacciones subatómicas, redondeando décadas de
-desarrollo científico.  El estudio detallado de sus propiedades
-acompañado posiblemente de señales de nueva física marcará el camino
-para encontrar el mecanismo de generación de masas y mezclas de
-neutrinos, así como la determinación de la partícula que compone la
-materia oscura del Universo. A más tardar al finalizar ésta década se
-espera tener respuesta a estos interrogantes. Todo esto tendrá un
-impacto en la enseñanza de la física a todos los niveles. Además el
-descubrimiento del Higgs, que sería la primera partícula escalar
-elemental, daría un mejor fundamento teórico a los modelos
-inflacionarios en cosmología y a la interpretación de la energía
-oscura como la causante de la expansión acelerada del Universo. El
-otro escenario posible en el que no se encuentre al Higgs del modelo
-estándar, debe dar lugar a datos experimentales suficientes para
-dilucidar cual es el realmente el mecanismo de ruptura de la simetría
-electrodébil. Nuestro grupo es el llamado a difundir estos avances en
-nuestra sociedad, como lo ha venido haciendo a través de conferencias
-y cursos de extensión en los últimos años. Es importante que nuestro
-país siga participando en el desarrollo de la física fundamental, no
-sólo con la participación de grupos teóricos como el nuestro, sino
-también con grupos experimentales de física de altas energías como lo
-viene haciendo en las colaboraciones ATLAS y CMS del LHC con grupos de
-la Universidad Antonio Nariño y de los Andes respectivamente. Con
-ellos, y con los otros grupos teóricos del país hemos venido
-colaborando y organizando congresos en el área en los últimos años
-para consolidar ésta área de investigación en el país.
+por el Modelo Estándar, el Higgs, establecería finalmente las teorías
+gauge con rompimiento espontáneo de simetría como el principio
+fundamental para describir las interacciones subatómicas, redondeando
+décadas de desarrollo científico.  El estudio detallado de las
+propiedades del Higgs propiedades, acompañado posiblemente de señales
+de nueva física, podría marcar el camino para encontrar el mecanismo
+de generación de masas y mezclas de neutrinos, así como la
+determinación de la partícula que compone la materia oscura del
+Universo. A más tardar al finalizar ésta década, se espera tener
+respuesta a estos interrogantes. Todo esto tendrá un impacto en la
+enseñanza de la física a todos los niveles. Además el descubrimiento
+del Higgs, que sería la primera partícula escalar elemental, daría un
+mejor fundamento teórico a los modelos inflacionarios en cosmología y
+a la interpretación de la energía oscura como la causante de la
+expansión acelerada del Universo. El otro escenario posible en el que
+no se encuentre al Higgs del modelo estándar, debe dar lugar a datos
+experimentales suficientes para dilucidar cual es realmente el
+mecanismo de ruptura de la simetría electrodébil. Nuestro grupo es el
+más directamente llamado a difundir estos avances en nuestra entorno social,
+como lo ha venido haciendo a través de conferencias y cursos de
+extensión en los últimos años. Es importante que nuestro país siga
+participando en el desarrollo de la física fundamental, no sólo con la
+participación de grupos teóricos como el nuestro, sino también con
+grupos experimentales de física de altas energías como lo viene
+haciendo en las colaboraciones ATLAS y CMS del LHC con grupos de la
+Universidad Antonio Nariño y de los Andes respectivamente. Con ellos,
+y con los otros grupos teóricos del país, hemos venido colaborando y
+organizando congresos en el área en los últimos años para consolidar
+ésta área de investigación en el país.
 
 El principal aporte un Grupo como el nuestro al desarrollo del país es
 la formación de talento humano con capacidad de hacer investigación
@@ -151,7 +153,8 @@ que los experimentos de detección directa, o indirecta a través de
 rayos cósmicos, entreguen una evidencia definitiva de materia oscura.
 
 
-
+\begin{ideas}
+  
 %Final
 Publicar al menos 3 artículos internacionales con algunos de los siguientes resultados:
 
@@ -165,6 +168,8 @@ presentes y futuros imponen sobre el neutralino como CMOI.
 Determinación de las señales en el LHC para 1) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 
 
 Formación 1 estudiante de maestría y 1 de doctorado.
+
+\end{ideas}
 
 \begin{ideas}
   
