--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -88,7 +88,6 @@
 \end{instrucciones}
 
 
-\section{Línea, programa o agenda de investigación en la que se inscribe el proyecto}
 
 \begin{instrucciones}
 planteamiento del problema, marco teórico, objetivos, 
@@ -100,17 +99,24 @@ anónimos que darán un concepto sobre la calidad de su proyecto. El proyecto no
 extensión mayor de  30 páginas, incluidos anexos y bibliografía
 \end{instrucciones}
 
+
+\begin{center}
+  Proyecto de Mediana Cuantía 2011\\
+  \textbf{Fenomenología de modelos supersimétricos con ruptura de paridad R y violación de número leptónico} 
+\end{center}
+
 % replace \include by \input at the end to check the pages
 % In branch release the full document will be generated
-\include{Portada}
-\include{Planteamiento_del_Problema}
-\include{Marco_teorico}
-\include{Objetivos}
-\include{Metodologia}
-\include{Resultados}
-\include{Cronograma}
-\include{Compromisos}
-\include{Estudiantes}
+%\input{Portada}
+
+\input{Planteamiento_del_Problema}
+\input{Marco_teorico}
+\input{Objetivos}
+\input{Metodologia}
+\input{Resultados}
+\input{Cronograma}
+\input{Compromisos}
+\input{Estudiantes}
 
 
 \section{ Presupuesto}
