--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -3,7 +3,6 @@
 \usepackage[spanish]{babel}
 %Maldito arial 12
 \usepackage[utf8]{inputenc}
-
 %changing the deafult fonts
 \usepackage{textcomp}
 \renewcommand{\rmdefault}{phv}
@@ -54,186 +53,27 @@
 {\begingroup}{ \medskip \endgroup}
 \excludecomment{evaluacion}
 
+\includecomment{gammalines}
+\specialcomment{gammalines}
+{\begingroup}{ \medskip \endgroup}
+\excludecomment{gammalines}
+
+
+\includecomment{darkmatter}
+\specialcomment{darkmatter}
+{\begingroup}{ \medskip \endgroup}
+\excludecomment{darkmatter}
+
+
+\includecomment{proyecto}
+\specialcomment{proyecto}
+{\begingroup}{\endgroup}
+
+
 
 \begin{document}
 
-\vglue -2cm
-\renewcommand{\arraystretch}{1.28}
-\noindent
-\hspace{-0.0cm}\begin{tabularx}{1.059\linewidth}{|c|Y|c|c|c|}\hline
- \multirow{4}{*}{\parbox[b]{3cm}{\vspace{0.1cm}\centering\includegraphics[scale=0.3]{udea}\\
-\scriptsize{{\fontfamily{ptm}\selectfont Universidad de Antioquia}}\\
-\tiny{{\fontfamily{ptm}\selectfont Vicerrectoría de Investigación}}
-}
-}  & \textbf{\large VICERRECTORÍA DE INVESTIGACIÓN} & \multicolumn{3}{c|}{{\large Actualización}}\\
-\cline{2-5}
- &\textbf{FICHA TÉCNICA}  & {\large Día} & {\large Mes} & {\large Año}\\
-\cline{3-5}
- &  &  &  & \\[-13pt]
- & \textbf{\small PROYECTOS DE INVESTIGACIÓN} &  &  & \\[-5pt]
- & \textbf{2009} &  &  & \\
-\hline
-\end{tabularx}
-%
-\renewcommand{\arraystretch}{1}
 
-\bigskip{}
-\noindent{}
-La ficha técnica es el resumen del proyecto, con una extensión máxima de seis páginas sin contar anexos. El investigador debe tener especial cuidado para que la ficha técnica contenga la información básica necesaria acerca del proyecto, puesto que el jurado final solo recibe la mencionada ficha. El proyecto de investigación quedará en archivo en el centro de investigaciones.
-
-
-
-\begin{center}
-  \textbf{\large INFORMACIÓN GENERAL}
-\end{center}
-
-\renewcommand{\arraystretch}{1.71}
-\noindent
-\hspace{-0.0cm}\begin{tabularx}
-{1.059\linewidth}{|l|l|}\hline
-\cellcolor[gray]{.8}\textbf{Título completo del proyecto}&\\\hline
-\multicolumn{2}{|Y|}{\cellcolor[gray]{.8}\textbf{Seleccione el área de conocimiento más cercana a su investigación en la que se inscribe el proyecto}}
-%\multicolumn{2}{|Y|}{}\\\hline
-\end{tabularx}
-%\hspace{-0.5cm}\begin{tabular}
-%{|l|l|l|l|l|l|}\hline
-%\renewcommand{\tabcolsep}{0.6cm}
-\hspace{-0.5cm}\begin{tabularx}
-{1.059\linewidth}{|p{3.59cm}|p{1.5cm}|p{3.59cm}|p{1.6cm}|p{3.59cm}|p{1.5cm}|}\hline
-Ciencias Agrarias &  &Ciencias Exactas y de la Tierra  & &Ingenierías &\\ \hline
-Ciencias Biológicas &  &Ciencias Humanas  & &Lingüística Letras y Artes & \\ \hline
-Ciencias de la Salud &  &Ciencias Sociales Aplicadas  & &Otros. Indique cuál & \\ 
- \end{tabularx}
-%\end{tabular}\
-\hspace{-0.5cm}\begin{tabularx}
-{1.059\linewidth}{|Y|Y|}\hline
-\cellcolor[gray]{.8}\textbf{Centro de investigación que tramita el proyecto}&Facultad de Ciencias Exactas y Naturales\\\hline
-\cellcolor[gray]{.8}\textbf{Grupo de investigación que avala el proyecto}& Fenomenología de Interacciones Fundamentales (GFIF)\\\hline
-\cellcolor[gray]{.8}\textbf{Código Colciencias del Grupo}&COL0008423\\\hline
-\cellcolor[gray]{.8}\textbf{Última clasificación Colciencias}&\hspace{-0.2cm}\vline año: \\\hline
-\cellcolor[gray]{.8}\textbf{Programa académico que apoya el proyecto*}&William Ponce\\\hline
-\cellcolor[gray]{.8}\textbf{Nombre del investigador principal}&98554575\\\hline
-\cellcolor[gray]{.8}\textbf{Documento de identidad}&Sostenibilidad 2009-2010 de GFIF\\\hline
-\cellcolor[gray]{.8}\textbf{Dependencia del investigador principal}&18 meses\\\hline
-\cellcolor[gray]{.8}\textbf{Convocatoria a la que se presenta}&18 meses\\\hline
-\cellcolor[gray]{.8}\textbf{Duración del proyecto (en meses)}&18 meses\\\hline
-\cellcolor[gray]{.8}\textbf{Resumen del presupuesto en millones}&18 meses\\\hline
-\end{tabularx}
-%\multicolumn{3}{c|}{{\large Actualización}}\
-\vspace{0.5cm}
-\renewcommand{\arraystretch}{1.5}
-\noindent
-\centering
-%\renewcommand{\arrayrulewidth}{1pt}
-\hspace{0.5cm}\begin{tabular}{|p{3.2cm}|p{3.05cm}|p{3.2cm}|p{3.2cm}|p{3.2cm}|}
-\hline
-\cellcolor[gray]{.8}\textbf{\hspace{0.8cm}Rubros} &\multicolumn{3}{l|}{\cellcolor[gray]{.8}\textbf{\hspace{1.5cm}FUENTES DE FINANCIACIÓN}}&\cellcolor[gray]{.8}\textbf{\hspace{0.8cm}Total}\\
-\cline{2-4}
-\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.89}\textbf{\hspace{0.8cm}CODI} &\cellcolor[gray]{.89}\textbf{APORTE U. DE A.indique la dependencia o grupo de investigación} &\cellcolor[gray]{.89}\textbf{APORTE EXTERNO. indique la entidad} &\cellcolor[gray]{.8}\textbf{}\\
-\hline
-\end{tabular}
-\hspace{-0.5cm}\begin{tabularx}
-{1.059\linewidth}{|p{3.18cm}|p{3.06cm}|p{3.22cm}|p{3.11cm}|p{3.28cm}|p{3.39cm}|}
-Personal &  &  & & &\\ \hline
-Pasantias &  &  & & & \\ \hline
-Jóvenes inv. Colciencias &  &  & & & \\ \hline
-Eventos &  &  & & &\\ \hline
-Servicios Técnicos &  &  & & &\\ \hline
-Material fungibles &  &  & & &\\ \hline
-Equipos&  &  & & &\\ \hline
-Telecomunicaciones &  &  & & &\\ \hline
-Trabajo de campo &  &  & & &\\ \hline
-Software &  &  & & &\\ \hline
-Publicaciones &  &  & & &\\ \hline
-Bibliografía &  &  & & &\\ \hline
- \end{tabularx}
-\hspace{0.5cm}\begin{tabular}{|p{3.2cm}|p{3.05cm}|p{3.2cm}|p{3.19cm}|p{3.2cm}|}
-\hline
-\cellcolor[gray]{.8}\textbf{\hspace{0.8cm}Total} &\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.8}\textbf{0\$}\\
-\hline
- \end{tabular}
-
-\renewcommand{\arraystretch}{1}
-
-\begin{center}
-  \textbf{\large DESCRIPCIÓN DEL PROYECTO}
-\end{center}
-
-% \bigskip
-% \begin{itemize}
-
-%    \item
-% {\bf Título del Proyecto } \\
-% Computing  Yukawa couplings for Up quarks and neutrinos in $SU(5)\times U(1)$
-
-%    \item
-% {\bf Nombre Investigador Principal }\\  Diego Restrepo.
-
-%    \item
-% {\bf Teléfono y Dirección Electrónica  }\\ Tel.: +57-4-2105635 \quad
-% E-mail: {\tt restrepo@udea.edu.co }
-
-%    \item
-% {\bf Nombre del Grupo de Investigación }\\
-% Grupo de  Fenomenología de Interacciones Fundamentales. \\
-% El Grupo apoya los programas de posgrado de Maestría y de Doctorado
-% del Instituto de Física.
-
-%    \item
-% {\bf Categoría del grupo en la convocatoria Colciencias}\\
-% Grupo A.
-
-
-% \item \textbf{Indicar si el grupo aplicó a estrategia de sostenibilidad 2005-2006 y cual fue el resultado}\\
-%  El grupo aplicó a la sostenibilidad 2005-2006 con los siguientes resultados:
-%  \begin{itemize}
-%  \item Número de publicaciones en revistas internacionales: 12
-%  \item Financiación Externa: 2 proyectos de Colciencias por valor de 220 millones
-%  \item Estudiantes de Maestría Graduados: 4
-%  \item Estudiantes de Doctorado Graduados: 1
-%  \end{itemize}
-
-
-% \item
-%   {\bf Nombres de quienes desarrollarán el Proyecto }\\
-%   Diego Restrepo (Investigador Principal)
-%   Enrico Nardi (Co-investigador); \\
-%   N.N (Administrador de Sistemas). % y Auxiliar de Administración).
-
-
-% \item \textbf{Programa de maestría o doctorado que el  grupo apoya}\\
-% Maestría y Doctorado en Física.
-%    \item
-% {\bf Estudiante(s) Nombre, Carné, Programa de Estudios  }\\
-% N.N. Maestría en Física. Corresponde a un estudiante nuevo de la maestría que ingrese para el semestre 2008-1 en la cohorte 27. \\
-
-
-% % \smallskip\noindent (Este proyecto involucra oficialmente el estudiante de
-% % Doctorado Jorge I. Zuluaga, el cual ya tiene los recursos economicos de una
-% % beca de Doctorado de la Universidad de Antioquia.  Sin embargo, por el
-% % desarrollo del Proyecto se involucrará otro estudiante de Doctorado al
-% % cual se brindará una aiuda economica con los recursos del proyecto.)
-
-%    \item
-% {\bf Duración del Proyecto: } \qquad \quad \  12 meses.
-
-%    \item
-% {\bf Valor total del Proyecto: } \qquad  49,000,000 de pesos.
-
-%    \item {\bf Valor aprobado por otra entidad: } \qquad  No Aplica.
-
-%    \item
-% {\bf Valor Solicitado al CODI: } \qquad   25,000,000 de pesos.
-
-% \end{itemize}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% %\newpage
-
-% % \pagenumbering{arabic}
-
-% % \small
 \begin{instrucciones}
   Del investigador para ser asociado:
   \begin{itemize}
@@ -248,7 +88,29 @@ Bibliografía &  &  & & &\\ \hline
 \end{instrucciones}
 
 
+
+\begin{instrucciones}
+planteamiento del problema, marco teórico, objetivos, 
+metodología, resultados esperados, cronograma, compromisos y estrategia de comunicación, funciones del 
+estudiante, presupuesto (según formato, incorporado en el texto y la versión en Excel) y  bibliografía.  Es 
+importante tener en cuenta que el proyecto de investigación es el documento sobre el cual se realizará la 
+evaluación, constituye un medio de comunicación científica por el cual el investigador interactúa con pares 
+anónimos que darán un concepto sobre la calidad de su proyecto. El proyecto no puede tener una 
+extensión mayor de  30 páginas, incluidos anexos y bibliografía
+\end{instrucciones}
+
+
+\begin{center}
+  Proyecto de Mediana Cuantía 2011\\
+  \textbf{Fenomenología de modelos supersimétricos con ruptura de paridad R y violación de número leptónico} 
+\end{center}
+
+% replace \include by \input at the end to check the pages
+% In branch release the full document will be generated
+%\input{Portada}
+
 \input{Planteamiento_del_Problema}
+\input{Marco_teorico}
 \input{Objetivos}
 \input{Metodologia}
 \input{Resultados}
@@ -257,13 +119,11 @@ Bibliografía &  &  & & &\\ \hline
 \input{Estudiantes}
 
 
-
-
 \section{ Presupuesto}
 \begin{instrucciones}
   ¿Los rubros son pertinentes? ¿Los montos son los adecuados para cumplir los objetivos del proyecto? ¿El número de investigadores y el tiempo de dedicación son adecuados?
 \end{instrucciones}
-Ver documento adjunto
+Ver documento adjunto 
 
 %\newpage
 \bibliographystyle{apsrev4-1long}
@@ -272,8 +132,7 @@ Ver documento adjunto
 \end{document}
 
 
-
-%%% Local Variables:
+%%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: Ficha-2011_bsm
-%%% End:
+%%% TeX-master: t
+%%% End: 
