--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -62,7 +62,7 @@
 \includecomment{darkmatter}
 \specialcomment{darkmatter}
 {\begingroup}{ \medskip \endgroup}
-\excludecomment{darkmatter}
+%\excludecomment{darkmatter}
 
 
 \includecomment{proyecto}
