Adding references to susy.bib

--- a/susy.bib
+++ b/susy.bib
@@ -1644,4 +1644,52 @@
       eprint         = "hep-ph/0501153",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
+}@Article{Bergman:2007pm,
+     author    = "Bergman, Oren and Seki, Shigenori and Sonnenschein, Jacob",
+     title     = "{Quark mass and condensate in HQCD}",
+     journal   = "JHEP",
+     volume    = "12",
+     year      = "2007",
+     pages     = "037",
+     eprint    = "0708.2839",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-th",
+     doi       = "10.1088/1126-6708/2007/12/037",
+     SLACcitation  = "%%CITATION = 0708.2839;%%"
+}
+@Article{Belanger:2010gh,
+     author    = "Belanger, G. and others",
+     title     = "{Indirect search for dark matter with micrOMEGAs2.4}",
+     journal   = "Comput. Phys. Commun.",
+     volume    = "182",
+     year      = "2011",
+     pages     = "842-856",
+     eprint    = "1004.1092",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-ph",
+     doi       = "10.1016/j.cpc.2010.11.033",
+     SLACcitation  = "%%CITATION = 1004.1092;%%"
+}
+@Article{Semenov:2008jy,
+     author    = "Semenov, A.",
+     title     = "{LanHEP - a package for the automatic generation of Feynman
+                  rules in field theory. Version 3.0}",
+     journal   = "Comput. Phys. Commun.",
+     volume    = "180",
+     year      = "2009",
+     pages     = "431-454",
+     eprint    = "0805.0555",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-ph",
+     doi       = "10.1016/j.cpc.2008.10.012",
+     SLACcitation  = "%%CITATION = 0805.0555;%%"
+}
+@Article{Pukhov:2004ca,
+     author    = "Pukhov, A.",
+     title     = "{Calchep 2.3: MSSM, structure functions, event generation,
+                  1, and generation of matrix elements for other packages}",
+     year      = "2004",
+     eprint    = "hep-ph/0412191",
+     archivePrefix = "arXiv",
+     SLACcitation  = "%%CITATION = HEP-PH/0412191;%%"
 }
